--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,6 @@
-
+@import "normalize.less";
+@import "blocks/container.less";
+@import "blocks/fonts.less";
+@import "blocks/visually-hidden.less";
+@import "blocks/variables.less";
+@import "blocks/mixins.less";
