создала less-файлы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,3 +4,24 @@
 @import "blocks/visually-hidden.less";
 @import "blocks/variables.less";
 @import "blocks/mixins.less";
+@import "blocks/page-header.less";
+@import "blocks/intro.less";
+@import "blocks/program-selection.less";
+@import "blocks/advantages.less";
+@import "blocks/demonstration.less";
+@import "blocks/contact-us.less";
+@import "blocks/page-footer.less";
+@import "blocks/main-products.less";
+@import "blocks/main-products-list.less";
+@import "blocks/additional-products.less";
+@import "blocks/additional-products-list.less";
+@import "blocks/promotion.less";
+@import "blocks/feedback.less";
+@import "blocks/cat-data.less";
+@import "blocks/program-type.less";
+@import "blocks/contacts-request.less";
+@import "blocks/cat-habits.less";
+@import "blocks/addition.less";
+
+
+
