делала верстку главной страницы с препроцессором

--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -3,9 +3,10 @@
   width: 320px;
 
   .main-font();
-  font-family: @fancy-font, "Arial", sans-serif;
-  /*text-transform: @main-text-transform;*/
-  border: 1px solid #cccccc;
+  font-family: @fancy-font-one, "Arial", sans-serif;
+  text-transform: @main-text-transform;
+  text-align: @main-text-align;
+  border: 1px solid #e6e6e6;
 
   box-sizing: border-box;
 }
