--- a/source/less/blocks/fonts.less
+++ b/source/less/blocks/fonts.less
@@ -1,13 +1,13 @@
 @font-face {
-  font-family: @fancy-font;
-  src: url("../fonts/oswaldmedium.woff2") format("woff2"),
-       url("../fonts/oswaldmedium.woff") format("woff");
+  font-family: @fancy-font-one;
+  src: url("../fonts/oswaldregular.woff2") format("woff2"),
+       url("../fonts/oswaldregular.woff") format("woff");
   font-display: swap;
 }
 
 @font-face {
-  font-family: @fancy-font;
-  src: url("../fonts/oswaldregular.woff2") format("woff2"),
-       url("../fonts/oswaldregular.woff") format("woff");
+  font-family: @fancy-font-two;
+  src: url("../fonts/oswaldmedium.woff2") format("woff2"),
+       url("../fonts/oswaldmedium.woff") format("woff");
   font-display: swap;
 }
