--- a/source/less/blocks/variables.less
+++ b/source/less/blocks/variables.less
@@ -1,7 +1,9 @@
 @tablet-width: 768px;
 @desktop-width: 1200px;
 @mobile-width-only: 767px;
-@fancy-font: "Oswald";
+@fancy-font-one: "oswaldregular";
+@fancy-font-two: "oswaldmedium";
+@main-text-align: center;
 @small-font-size: 12px;
 @main-font-size: 14px;
 @medium-font-size: 16px;
@@ -10,6 +12,7 @@
 @medium-line-height: 16px;
 @main-line-height: 18px;
 @big-line-height: 20px;
+@biggest-line-height: 36px;
 @main-text-transform: uppercase;
 @main-color: #68b738;
 @color-title: #111111;
