--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,6 +5,7 @@
 @import "blocks/variables.less";
 @import "blocks/mixins.less";
 @import "blocks/page-header.less";
+@import "blocks/site-list.less";
 @import "blocks/intro.less";
 @import "blocks/program-selection.less";
 @import "blocks/advantages.less";
@@ -22,6 +23,3 @@
 @import "blocks/contacts-request.less";
 @import "blocks/cat-habits.less";
 @import "blocks/addition.less";
-
-
-
