доделала верстку главной страницы

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -21,8 +21,7 @@
     padding-left: 80px;
 
     font-family: "Arial", sans-serif;
-    font-size: @main-font-size;
-    line-height: @main-line-height;
+    .main-font();
     text-transform: none;
     text-align: left;
     color: @color-text;
