делала верстку каталога

--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -30,11 +30,10 @@ img {
 .button {
   display: block;
 
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 0 auto;
   padding-top: 13px;
   padding-bottom: 12px;
-  width: auto;
+  width: 100%;
 
   .set-color(@main-color);
 
