--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -3,3 +3,12 @@
   margin-bottom: 20px;
   margin-right: 90px;
 }
+
+.page-header__logo-image:hover {
+  opacity: 0.8;
+}
+
+.page-header__logo-image:focus,
+.page-header__logo-image:active {
+  opacity: 0.6;
+}
