--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,9 +11,9 @@
 @import "blocks/advantages.less";
 @import "blocks/demonstration.less";
 @import "blocks/contact-us.less";
+@import "blocks/page-main.less";
 @import "blocks/page-footer.less";
 @import "blocks/main-products.less";
-@import "blocks/main-products-list.less";
 @import "blocks/additional-products.less";
 @import "blocks/additional-products-list.less";
 @import "blocks/promotion.less";
