--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -10,3 +10,14 @@
   text-align: left;
   color: @color-title;
 }
+
+.page-main__call-to-action {
+  margin-bottom: 39px;
+  margin-left: 20px;
+  max-width: 230px;
+
+  .main-font();
+  text-transform: none;
+  text-align: left;
+  color: @color-title;
+}
