--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -14,6 +14,11 @@
   margin-right: 2px;
 }
 
+.feedback__submit {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 /*& input::placeholder,
 & textarea::placeholder {
     color: black;
