--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -22,3 +22,11 @@
   font-family: @fancy-font-two, "Arial", sans-serif;
   color: @color-title;
 }
+
+.site-list__item a:hover {
+  color: rgba(17, 17, 17, 0.6);
+}
+
+.site-list__item a:active {
+  color: rgba(17, 17, 17, 0.3);
+}
