--- a/source/less/blocks/cat-habits.less
+++ b/source/less/blocks/cat-habits.less
@@ -27,9 +27,10 @@
 }
 
 .cat-habits__textfield {
+  margin-bottom: 31px;
   margin-left: 19px;
-  padding-top: 20px;
-  padding-left: 21px;
+  padding-top: 15px;
+  padding-left: 16px;
   width: 279px;
 
   resize: none;
@@ -38,6 +39,12 @@
     margin-left: 0;
     width: 100%;
   }*/
+}
+
+.cat-habits__textfield::placeholder {
+  font-size: @medium-font-size;
+  line-height: @main-line-height;
+  color: @color-text;
 }
 
 /*.story__textfield:hover {
@@ -50,8 +57,3 @@
     background-color: transparent;
     border: 4px solid #e5e5e5;
 }*/
-
-/*.cat-habits__textfield::placeholder {
-  font-weight: normal;
-}*/
-
