--- a/source/less/blocks/program-selection.less
+++ b/source/less/blocks/program-selection.less
@@ -14,21 +14,25 @@
 .selection-list__label {
   position: relative;
 
-  padding-left: 64px;
+  padding-left: 44px;
 
   font-size: @medium-font-size;
   line-height: @main-line-height;
   color: #222222;
 }
 
+.selection-list__label:active {
+  color: rgba(34, 34, 34, 0.3);
+}
+
 .selection-list__label::before {
   content: "";
   position: absolute;
-  bottom: -5px;
+  top: -3px;
   left: 0;
 
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
 
   border: 1px solid #cdcdcd;
   border-radius: 50%;
@@ -46,11 +50,11 @@
 .selection-list__input:checked + .selection-list__label::after {
   content: "";
   position: absolute;
-  top: 0;
-  left: 11px;
+  top: 5px;
+  left: 9px;
 
-  width: 18px;
-  height: 18px;
+  width: 12px;
+  height: 12px;
 
   background-color: @main-color;
   border-radius: 50%;
