делала верстку декоративных элементов

--- a/source/less/blocks/contacts-request.less
+++ b/source/less/blocks/contacts-request.less
@@ -69,6 +69,10 @@
   &--phone {
     width: 75%;
   }
+
+  &:active {
+    border-color: @color-text;
+  }
 }
 
 .contacts-request__email input::placeholder,
