делала кнопку открытия-закрытия главного меню на мобильной версии

--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -9,6 +9,14 @@
   border: 1px solid #e6e6e6;
 
   box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    width: @tablet-width;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: @desktop-width;
+  }
 }
 
 *,
