--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,6 +4,7 @@
 @import "blocks/visually-hidden.less";
 @import "blocks/variables.less";
 @import "blocks/mixins.less";
+@import "blocks/main-nav.less";
 @import "blocks/page-header.less";
 @import "blocks/site-list.less";
 @import "blocks/intro.less";
