--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -16,7 +16,7 @@
   width: 70px;
   height: 50px;
 
-  background-color: #f0f;
+  background-color: transparent;
 
   cursor: pointer;
   border: none;
