делала верстку планшетной версии главной страницы

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,6 +1,10 @@
 .page-header {
+  padding-top: 15px;
+
   @media (min-width: @tablet-width) {
     display: flex;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 
@@ -8,6 +12,10 @@
   display: block;
   margin-bottom: 20px;
   margin-right: 90px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 17px;
+  }
 }
 
 .page-header__logo-image:hover {
