--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -4,6 +4,11 @@
   width: 320px;
   min-height: 0;
   margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    width: auto;
+    margin: 0;
+}
 }
 
 .main-nav__toggle {
