--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,4 +1,4 @@
-/*.page-main h1 {
+.page-main__title {
   margin-top: 30px;
   margin-bottom: 35px;
   margin-left: 20px;
@@ -9,7 +9,7 @@
   text-transform: none;
   text-align: left;
   color: @color-title;
-}*/
+}
 
 .page-main__call-to-action {
   margin-bottom: 39px;
