--- a/source/less/blocks/program-type.less
+++ b/source/less/blocks/program-type.less
@@ -1,3 +1,9 @@
+/*.program-type__wrapper {
+  @media (min-width: @tablet-width) {
+    margin-top: 120px;
+  }
+}*/
+
 .program-type-list {
   .list-reset();
 }
