--- a/source/less/blocks/fonts.less
+++ b/source/less/blocks/fonts.less
@@ -1,5 +1,7 @@
 @font-face {
   font-family: @fancy-font-one;
+  font-weight: normal;
+  font-style: normal;
   src: url("../fonts/oswaldregular.woff2") format("woff2"),
        url("../fonts/oswaldregular.woff") format("woff");
   font-display: swap;
