--- a/source/less/blocks/demonstration.less
+++ b/source/less/blocks/demonstration.less
@@ -4,6 +4,13 @@
   padding-right: 20px;
 
   background-color: @background-color;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 30px;
+    padding-right: 31px;
+
+    background-color: transparent;
+  }
 }
 
 .demonstration__title {
@@ -13,6 +20,13 @@
   text-transform: none;
   text-align: left;
   color: @color-title;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 50px;
+    margin-bottom: 60px;
+
+    font-size: 60px;
+  }
 }
 
 .demonstration__text {
@@ -21,6 +35,22 @@
   text-transform: none;
   text-align: left;
   color: @color-text;
+
+  @media (min-width: @tablet-width) {
+    margin-right: 25px;
+    margin-bottom: 56px;
+
+    font-size: @medium-font-size;
+    line-height: 24px;
+  }
+}
+
+.demonstration__wrapper {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 72px;
+  }
 }
 
 .data-list {
@@ -36,6 +66,22 @@
   position: relative;
 
   min-width: 124px;
+
+  @media (min-width: @tablet-width) {
+    min-width: 162px;
+  }
+}
+
+.data-list__item:first-child {
+  @media (min-width: @tablet-width) {
+    margin-right: 42px;
+  }
+}
+
+.data-list__item:last-child {
+  @media (min-width: @tablet-width) {
+    margin-right: 167px;
+  }
 }
 
 .data-list__number-wrapper {
@@ -52,6 +98,11 @@
   line-height: 24px;
   font-weight: normal;
   color: @color-title;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
+  }
 }
 
 .data-list__text {
@@ -65,18 +116,37 @@
   font-weight: normal;
   color: @color-text;
   background-color: @background-color;
+
+  @media (min-width: @tablet-width) {
+    font-size: @main-font-size;
+    line-height: @small-line-height;
+
+    background-color: #ffffff;
+  }
 }
 
 .data-list__text--slim {
   padding-left: 17px;
   padding-right: 17px;
   width: 88px;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 120px;
+  }
 }
 
 .data-list__text--waste-time {
   padding-left: 17px;
   padding-right: 17px;
   width: 91px;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 1px;
+    padding-right: 1px;
+    width: 141px;
+  }
 }
 
 .demonstration__conclusion {
@@ -84,6 +154,26 @@
   line-height: @big-line-height;
   font-weight: normal;
   color: @color-title;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 0;
+
+    font-size: 20px;
+    line-height: 30px;
+    text-align: right;
+  }
+}
+
+.demonstation__slider--before {
+  @media (min-width: @tablet-width) {
+    background-color: @background-color;
+  }
+}
+
+.demonstation__slider--after {
+  @media (min-width: @tablet-width) {
+    background-color: #eaeaea;
+  }
 }
 
 .demonstration__list {
