--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -6,6 +6,10 @@
     margin-left: 120px;
     min-height: 775px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 180px;
+  }
 }
 
 .intro__presentation {
@@ -15,6 +19,11 @@
 
   background-color: @main-color;
   background-image: url("../img/index-background-mobile@1x.jpg");
+
+  @media (min-resolution: 144dpi),
+    (min-resolution: 1.5dppx) {
+    background-image: url("../img/index-background-mobile@2x.jpg");
+  }
 
   @media (min-width: @tablet-width) {
     background-color: transparent;
@@ -33,7 +42,7 @@
   color: #ffffff;
 
    @media (min-width: @tablet-width) {
-     margin-bottom: 33px;
+    margin-bottom: 33px;
 
     font-size: 60px;
     line-height: 60px;
@@ -60,6 +69,29 @@
   }
 }
 
+.intro__picture-wrapper {
+  @media (min-width: @desktop-width) {
+    content: "";
+    position: absolute;
+    left: 42%;
+    bottom: 220px;
+    z-index: 0;
+
+    width: 720px;
+    height: 696px;
+
+    background-color: @main-color;
+    background-image: url("../img/index-background-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 10%;
+
+    @media (min-resolution: 144dpi),
+    (min-resolution: 1.5dppx) {
+    background-image: url("../img/index-background-desktop@2x.jpg");
+    }
+  }
+}
+
 .intro__image {
   content: "";
   position: absolute;
@@ -73,6 +105,11 @@
 
     display: block;
     margin-bottom: 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 19%;
+    left: -21.5%;
   }
 }
 
