--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -8,7 +8,19 @@
   @media (min-width: @tablet-width) {
     width: auto;
     margin: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
+    z-index: 5;
+  }
 }
+
+.main-nav__wrapper {
+  @media (min-width: @desktop-width) {
+    position: relative;
+    z-index: 5;
+  }
 }
 
 .main-nav__toggle {
