--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -6,6 +6,16 @@
     padding-left: 30px;
     padding-right: 30px;
   }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
+    z-index: 10;
+
+    justify-content: space-between;
+    padding-top: 53px;
+    padding-left: 109px;
+    padding-right: 60px;
+  }
 }
 
 .page-header__logo {
@@ -15,6 +25,10 @@
 
   @media (min-width: @tablet-width) {
     margin-top: 7px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 0;
   }
 }
 
