сделала десктопную версию программы питания

--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -9,6 +9,7 @@
 
   @media (min-width: @desktop-width) {
     margin-left: 180px;
+    margin-bottom: -150px;
   }
 }
 
@@ -73,7 +74,7 @@
   @media (min-width: @desktop-width) {
     content: "";
     position: absolute;
-    left: 42%;
+    left: 41%;
     bottom: 220px;
     z-index: 0;
 
@@ -83,7 +84,6 @@
     background-color: @main-color;
     background-image: url("../img/index-background-desktop@1x.jpg");
     background-repeat: no-repeat;
-    background-position: 10%;
 
     @media (min-resolution: 144dpi),
     (min-resolution: 1.5dppx) {
