--- a/source/less/blocks/program-type.less
+++ b/source/less/blocks/program-type.less
@@ -5,12 +5,23 @@
 }*/
 
 .program-type-list {
+  margin-left: 20px;
+  margin-right: 20px;
+
   .list-reset();
+
+  @media (min-width: @tablet-width) {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    margin-left: 70px;
+  }
 }
 
 .program-type-list__item {
-  margin-left: 20px;
-  margin-right: 20px;
   padding-left: 21px;
   padding-right: 20px;
 
@@ -18,10 +29,20 @@
   background-color: @background-color;
 
   @media (min-width: @tablet-width) {
-    margin-left: 30px;
-    margin-right: 30px;
     padding-bottom: 62px;
     padding-left: 52px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 80px;
+    padding-left: 45px;
+    width: 529px;
+  }
+}
+
+.program-type-list__item:last-child {
+  @media (min-width: @desktop-width) {
+    margin-right: 0;
   }
 }
 
@@ -38,6 +59,12 @@
 
   @media (min-width: @tablet-width) {
     font-size: 36px;
+  }
+
+   @media (min-width: @tablet-width) {
+     padding-top: 81px;
+     padding-bottom: 60px;
+     padding-left: 164px;
   }
 }
 
@@ -60,6 +87,14 @@
     width: 200px;
     height: 200px;
   }
+
+  @media (min-width: @desktop-width) {
+    top: 40%;
+    left: 0;
+
+    width: 100px;
+    height: 100px;
+  }
 }
 
 .program-type-list__slim::after {
@@ -80,6 +115,14 @@
 
     width: 141px;
     height: 194px;
+  }
+
+   @media (min-width: @desktop-width) {
+    top: 38%;
+    left: 1%;
+
+    width: 71px;
+    height: 97px;
   }
 }
 
@@ -102,6 +145,14 @@
     width: 200px;
     height: 200px;
   }
+
+    @media (min-width: @desktop-width) {
+    top: 40%;
+    left: 0;
+
+    width: 100px;
+    height: 100px;
+  }
 }
 
 .program-type-list__pro::after {
@@ -122,6 +173,14 @@
 
     width: 268px;
     height: 113px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 53%;
+    left: -2%;
+
+    width: 134px;
+    height: 57px;
   }
 }
 
@@ -146,9 +205,19 @@
   }
 }
 
+.program-type-list__item .program-type-list__slim-text {
+  @media (min-width: @desktop-width) {
+    max-width: 490px;
+  }
+}
+
 .program-type-list__item .program-type-list__pro-text {
   @media (min-width: @tablet-width) {
     max-width: 340px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 450px;
   }
 }
 
@@ -181,6 +250,10 @@
 
     @media (min-width: @tablet-width) {
       right: 75%;
+    }
+
+    @media (min-width: @desktop-width) {
+      right: 65%;
     }
   }
 
