--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -2,6 +2,10 @@
   @media (min-width: @tablet-width) {
     border-bottom: 1px solid #e6e6e6;
   }
+
+  @media (min-width: @desktop-width) {
+    border-bottom: none;
+  }
 }
 
 .advantages__title {
@@ -22,7 +26,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-left: 70px;
+    margin-left: 113px;
   }
 }
 
@@ -39,6 +43,10 @@
     padding-bottom: 0;
     margin-left: 30px;
     margin-right: 80px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 110px;
   }
 }
 
