--- a/source/less/blocks/program-type.less
+++ b/source/less/blocks/program-type.less
@@ -1,9 +1,3 @@
-/*.program-type__wrapper {
-  @media (min-width: @tablet-width) {
-    margin-top: 120px;
-  }
-}*/
-
 .program-type-list {
   margin-left: 20px;
   margin-right: 20px;
@@ -17,7 +11,8 @@
 
   @media (min-width: @desktop-width) {
     display: flex;
-    margin-left: 70px;
+    margin-bottom: 79px;
+    margin-left: 109px;
   }
 }
 
@@ -34,9 +29,9 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-right: 80px;
+    margin-right: 140px;
     padding-left: 45px;
-    width: 529px;
+    width: 540px;
   }
 }
 
