--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -8,8 +8,12 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 440px;
+    min-width: 440px;
     margin: 0 auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 45px;
   }
 }
 
@@ -21,11 +25,21 @@
   }
 }
 
-.site-list__item:first-child {
+.site-list__item:nth-child(1) {
   border-top: 1px solid #e6e6e6;
 
   @media (min-width: @tablet-width) {
     border-top: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 36px;
+  }
+}
+
+.site-list__item:nth-child(2) {
+  @media (min-width: @desktop-width) {
+    margin-right: 38px;
   }
 }
 
