--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -10,6 +10,11 @@
     padding-left: 31px;
     padding-right: 34px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 110px;
+    padding-right: 110px;
+  }
 }
 
 .page-footer__wrapper {
