делала верстку планшетной версии каталога

--- a/source/less/blocks/contact-us.less
+++ b/source/less/blocks/contact-us.less
@@ -11,6 +11,10 @@
    }
 }
 
+.contact-us--catalog {
+  background-color: @background-color;
+}
+
 .contact-us__text {
   display: flex;
   justify-content: space-between;
@@ -19,6 +23,7 @@
   padding-left: 19px;
 
   @media (min-width: @tablet-width) {
+    padding-left: 71px;
      padding-right: 71px;
    }
 
@@ -70,7 +75,8 @@
     margin-top: 25px;
     width: 190px;
 
-    font-size: @medium-line-height;
+    font-size: @medium-font-size;
+    line-height: @big-line-height;
     text-align: right;
   }
 }
