--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -9,6 +9,13 @@
   text-transform: none;
   text-align: left;
   color: @color-title;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 155px;
+    margin-left: 33px;
+
+    font-size: 60px;
+  }
 }
 
 .page-main__call-to-action {
