--- a/source/less/blocks/main-products.less
+++ b/source/less/blocks/main-products.less
@@ -2,6 +2,10 @@
   .list-reset();
 
   @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: baseline;
     margin-left: 30px;
     margin-right: 30px;
   }
@@ -13,8 +17,16 @@
   border-bottom: 1px solid #ededed;
 
   @media (min-width: @tablet-width) {
-    width: 324px;
+    position: relative;
 
+    padding-top: 0;
+    margin-bottom: 140px;
+    padding-left: 38px;
+    padding-right: 37px;
+    width: 324px;
+    min-height: 431px;
+
+    background-color: #f2f2f2;
     border-bottom: none;
   }
 }
@@ -42,14 +54,56 @@
   color: @color-title;
 }
 
+.main-products-list__image--chicken-small {
+  @media (min-width: @tablet-width) {
+    content: "";
+    position: absolute;
+
+    top: -40px;
+  }
+}
+
 .main-products-list__link h3 {
   margin-top: 0;
+  max-width: 87px;
 
   font-weight: normal;
+  text-align: left;
+
+  @media (min-width: @tablet-width) {
+    margin: 0 auto;
+    margin-top: 39px;
+    margin-bottom: 28px;
+    max-width: 135px;
+
+    font-size: 20px;
+    text-align: center;
+  }
+}
+
+.main-products-list__info-wrapper--chicken-small {
+   @media (min-width: @tablet-width) {
+     position: relative;
+     top: 100px;
+  }
 }
 
 .main-products-list__data {
   width: 142px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 33px;
+    width: 100%;
+  }
+}
+
+.main-products-list__data td {
+  @media (min-width: @tablet-width) {
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    border-bottom: 1px solid #cdcdcd;
+  }
 }
 
 .main-products-list__data td {
@@ -58,6 +112,11 @@
   line-height: @medium-line-height;
   text-transform: none;
   color: @color-text;
+
+   @media (min-width: @tablet-width) {
+     font-size: @medium-font-size;
+     line-height: @medium-line-height;
+   }
 }
 
 .main-products-list__data td:first-child {
