--- a/source/less/blocks/main-products.less
+++ b/source/less/blocks/main-products.less
@@ -19,8 +19,8 @@
   @media (min-width: @tablet-width) {
     position: relative;
 
-    padding-top: 0;
     margin-bottom: 140px;
+    padding-top: 0;
     padding-left: 38px;
     padding-right: 37px;
     width: 324px;
@@ -39,6 +39,14 @@
   }
 }
 
+.main-products-list__item--rice-small {
+  @media (min-width: @tablet-width) {
+    align-self: flex-start;
+
+    margin-bottom: 71px;
+  }
+}
+
 .main-products-list__wrapper {
   display: flex;
 
@@ -54,12 +62,28 @@
   color: @color-title;
 }
 
-.main-products-list__image--chicken-small {
+.main-products-list__image--chicken-small,
+.main-products-list__image--fish-small,
+.main-products-list__image--buckwheat-small,
+.main-products-list__image--rice-small {
   @media (min-width: @tablet-width) {
     content: "";
     position: absolute;
 
     top: -40px;
+    right: 15px;
+  }
+}
+
+.main-products-list__image--chicken-big,
+.main-products-list__image--fish-big,
+.main-products-list__image--buckwheat-big {
+  @media (min-width: @tablet-width) {
+    content: "";
+    position: absolute;
+
+    top: -75px;
+    right: 15px;
   }
 }
 
@@ -81,10 +105,10 @@
   }
 }
 
-.main-products-list__info-wrapper--chicken-small {
-   @media (min-width: @tablet-width) {
-     position: relative;
-     top: 100px;
+.main-products-list__info-wrapper {
+  @media (min-width: @tablet-width) {
+    position: relative;
+    top: 100px;
   }
 }
 
@@ -113,10 +137,10 @@
   text-transform: none;
   color: @color-text;
 
-   @media (min-width: @tablet-width) {
-     font-size: @medium-font-size;
-     line-height: @medium-line-height;
-   }
+  @media (min-width: @tablet-width) {
+    font-size: @medium-font-size;
+    line-height: @medium-line-height;
+  }
 }
 
 .main-products-list__data td:first-child {
@@ -125,6 +149,24 @@
 
 .main-products-list__data td:last-child {
   text-align: right;
+}
+
+.main-products-list__item--promo {
+  @media (min-width: @tablet-width) {
+    margin-bottom: 71px;
+
+    background-color: transparent;
+    border: 1px solid #cdcdcd;
+  }
+}
+
+.main-products__info--promo {
+  @media (min-width: @tablet-width) {
+    align-self: flex-start;
+
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
 
 .main-products-list__more {
@@ -136,6 +178,15 @@
   font-size: @medium-font-size;
   line-height: @medium-line-height;
   color: @color-title;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 130px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    font-size: 20px;
+    line-height: 20px;
+  }
 
   &::before,
   &::after {
@@ -149,6 +200,12 @@
 
     background-color: #222222;
     opacity: 0.2;
+
+    @media (min-width: @tablet-width) {
+      left: 35%;
+
+      width: 61px;
+    }
   }
 
   &::after {
@@ -168,4 +225,12 @@
   line-height: @medium-line-height;
   text-transform: none;
   color: @color-text;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 28px;
+    margin-bottom: 90px;
+
+    font-size: @medium-font-size;
+    line-height: normal;
+  }
 }
