--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -16,6 +16,30 @@
   text-align: left;
   color: @color-title;
 
+  @media (min-width: @tablet-width) {
+    margin-left: 67px;
+
+    font-size: @big-font-size;
+    line-height: @biggest-line-height;
+  }
+
+  &::before {
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      top: 60%;
+      left: -9.5%;
+
+      flex-grow: 1;
+      flex-shrink: 0;
+
+      width: 4%;
+      height: 3px;
+
+      background: @main-color;
+    }
+  }
+
   &::after {
     content: "";
     position: absolute;
@@ -29,6 +53,12 @@
     height: 3px;
 
     background: @main-color;
+
+    @media (min-width: @tablet-width) {
+      top: 60%;
+
+      width: 45%;
+    }
   }
 }
 
@@ -37,6 +67,11 @@
   margin-right: 20px;
 
   .list-reset();
+
+  @media (min-width: @tablet-width) {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
 }
 
 .additional-products-list__item {
