--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -16,6 +16,10 @@
 
     font-size: 60px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 110px;
+  }
 }
 
 .page-main__call-to-action {
