--- a/source/less/blocks/promotion.less
+++ b/source/less/blocks/promotion.less
@@ -30,6 +30,8 @@
   }
 
   @media (min-width: @desktop-width) {
+    display: block;
+
     background-image: url("../img/gift-photo-desktop@1x.jpg");
 
     @media (min-resolution: 144dpi),
