верстала десктопную версию блока дополнительных товаров каталога

--- a/source/less/blocks/main-products.less
+++ b/source/less/blocks/main-products.less
@@ -66,6 +66,7 @@
 
 .main-products-list__wrapper {
   display: flex;
+  justify-content: space-between;
 
   @media (min-width: @tablet-width) {
     display: block;
@@ -126,6 +127,8 @@
   @media (min-width: @tablet-width) {
     position: relative;
     top: 115px;
+
+    margin-bottom: 145px;
   }
 }
 
@@ -187,7 +190,7 @@
   @media (min-width: @tablet-width) {
     align-self: flex-start;
 
-    margin-bottom: 70px;
+    margin-bottom: 115px;
     padding-left: 30px;
     padding-right: 30px;
   }
