--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -45,7 +45,9 @@
     }
 
     @media (min-width: @desktop-width) {
-      width: 7%;
+      left: -8.3%;
+
+      width: 5%;
     }
   }
 
@@ -75,6 +77,14 @@
   }
 }
 
+.additional-products__wrapper {
+  @media (min-width: @desktop-width) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
 .additional-products-list {
   margin-left: 20px;
   margin-right: 20px;
@@ -86,7 +96,24 @@
     margin-left: 30px;
     margin-right: 30px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
+    margin-left: 110px;
+  }
 }
+
+.additional-products-list__wrapper {
+  @media (min-width: @desktop-width) {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    border-top: 1px solid @border-color-one;
+    border-bottom: 1px solid @border-color-one;
+  }
+}
+
 
 .additional-products-list__item {
   padding-top: 14px;
@@ -102,13 +129,9 @@
     border-bottom: none;
     border: 1px solid @border-color-one;
   }
-}
 
-.additional-products-list__item:nth-child(1) {
-  border-top: 1px solid #ededed;
-
-  @media (min-width: @tablet-width) {
-    border-top: 1px solid @border-color-one;
+  @media (min-width: @desktop-width) {
+    padding-bottom: 0;
   }
 }
 
@@ -120,11 +143,40 @@
   }
 }
 
+.additional-products-list__item:nth-child(1) {
+  border-top: 1px solid #ededed;
+
+  @media (min-width: @tablet-width) {
+    border-top: 1px solid @border-color-one;
+
+    @media (min-width: @desktop-width) {
+      border: none;
+      /*border-top: 1px solid @border-color-one;
+      border-bottom: 1px solid @border-color-one;*/
+    }
+  }
+}
+
+.additional-products-list__item:nth-child(2),
+.additional-products-list__item:nth-child(3),
+.additional-products-list__item:nth-child(4) {
+  @media (min-width: @desktop-width) {
+    border: none;
+    /*border-bottom: 1px solid @border-color-one;*/
+  }
+}
+
 .additional-products-list__info {
    @media (min-width: @tablet-width) {
      display: flex;
      justify-content: space-between;
    }
+}
+
+.additional-products-list__link {
+  @media (min-width: @desktop-width) {
+    width: 35%;
+  }
 }
 
 .additional-products-list__item-title {
@@ -142,6 +194,18 @@
     font-size: 20px;
     line-height: @big-line-height;
   }
+
+   @media (min-width: @desktop-width) {
+    margin-top: 10px;
+    margin-bottom: 0;
+    width: 30%;
+  }
+}
+
+.additional-products-list__item-title--water {
+  @media (min-width: @desktop-width) {
+    min-width: 130px;
+  }
 }
 
 .additional-products-list__data {
@@ -151,6 +215,11 @@
   @media (min-width: @tablet-width) {
     margin-top: 18px;
     width: 35%;
+  }
+
+   @media (min-width: @desktop-width) {
+    margin-top: 10px;
+    width: 285px;
   }
 }
 
@@ -173,4 +242,91 @@
 
 .additional-products-list__data td:last-child {
   text-align: right;
+
+  @media (min-width: @desktop-width) {
+    text-align: left;
+  }
+}
+
+/*.additional-products-list__button {
+  @media (min-width: @desktop-width) {
+    position: relative;
+    right: 200px;
+  }
+}*/
+
+.promotion {
+  margin-top: 39px;
+  margin-left: 20px;
+  margin-right: 20px;
+  min-height: 289px;
+
+  background-color: @main-color;
+  background-image: url("../img/gift-photo-mobile@1x.jpg");
+  background-repeat: no-repeat;
+
+  @media (min-resolution: 144dpi),
+    (min-resolution: 1.5dppx) {
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
+  }
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 76px;
+    padding-left: 121px;
+    padding-right: 85px;
+    min-height: 200px;
+
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
+
+    @media (min-resolution: 144dpi),
+    (min-resolution: 1.5dppx) {
+    background-image: url("../img/gift-photo-tablet@2x.jpg");
+  }
+  }
+
+  @media (min-width: @desktop-width) {
+    display: block;
+    margin-bottom: 0;
+    margin-right: 110px;
+    width: 245px;
+
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
+
+    @media (min-resolution: 144dpi),
+    (min-resolution: 1.5dppx) {
+    background-image: url("../img/gift-photo-desktop@2x.jpg");
+  }
+  }
+}
+
+.promotion__gift {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 65px;
+  padding-bottom: 59px;
+}
+
+.promotion__icon path {
+  fill: #ffffff;
+}
+
+.promotion__link {
+  display: block;
+  margin-left: 55px;
+  margin-right: 55px;
+
+  font-family: "Arial", sans-serif;
+  font-size: @medium-font-size;
+  line-height: @big-line-height;
+  text-transform: none;
+  color: #ffffff;
+
+  @media (min-width: @tablet-width) {
+    width: 165px;
+
+    text-align: left;
+  }
 }
